# libscorepress

./: .gitignore  AUTHORS  LICENCES  Makefile  Makefile.ac  README  README.md  TODO  configure  configure.ac  libscorepress.cbp  libscorepress.layout
data/: scorepress.pc.ac
data/dtd/: libscorepress.symbols.dtd
data/symbol/: default.xml
doc/: Doxyfile.ac  api.texi  classes.dox  doxygen.css  engraver.dox  eupl.texi  intro.texi  scorepress.info  scorepress.texi  sprite_id.dox  tutorial.texi  undefined.dox
doxygen/: Doxyfile  classes.dox  engraver.dox
include/scorepress/: basetypes.hh  classes.hh  config.hh.ac  context.hh  cursor.hh  cursor_base.hh  document.hh  edit_cursor.hh  engine.hh  engrave_info.hh  engraver.hh  engraver_state.hh  error.hh  export.hh  file_format.hh  file_reader.hh  file_writer.hh  fraction.hh  log.hh  meta.hh  object_cursor.hh  pageset.hh  parameters.hh  pick.hh  plate.hh  press.hh  press_state.hh  reengrave_info.hh  refptr.hh  renderer.hh  score.hh  smartptr.hh  sprite_id.hh  sprites.hh  stem_info.hh  test.hh  ui.hh  undefined.hh  user_cursor.hh
src/: autoconf_check.cpp  classes.cpp  classes.hh  config.cpp  config.hh.ac  context.cpp  context.hh  cursor.cpp  cursor.hh  edit_cursor.cpp  edit_cursor.hh  engine.cpp  engine.hh  engrave_info.cpp  engrave_info.hh  engraver.cpp  engraver.hh  engraver_state.cpp  engraver_state.hh  error.cpp  error.hh  file_format.cpp  fraction.cpp  fraction.hh  log.cpp  log.hh  main.cpp  meta.hh  object_cursor.cpp  pageset.cpp  pageset.hh  parameters.cpp  parameters.hh  pick.cpp  pick.hh  plate.cpp  plate.hh  press.cpp  press.hh  press_state.cpp  (+17 more)
